kubernetes/security/foundation/network-policies/apps/loki.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-gateway-lock
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/component: gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy-collector
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
        - matchLabels:
            io.kubernetes.pod.namespace: grafana
            app: grafana
        - matchLabels:
            io.kubernetes.pod.namespace: opentelemetry
            app.kubernetes.io/part-of: opentelemetry
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - host
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-lock
  namespace: monitoring
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: [loki]
      - key: app.kubernetes.io/component
        operator: In
        values: [single-binary, memcached-chunks-cache, memcached-results-cache]
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: loki
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
    - fromEntities:
        - host
